syntax = "proto3";

option go_package = "app/post";

service Post {
    rpc CreatePost(CreatePostRequest) returns(CreatePostResponse);
    rpc GetPostFeed(GetPostFeedRequest) returns(GetPostFeedResponse);
}

message CreatePostRequest {
    string description = 2;
    string resource_data = 3;
    string resource_mime_type = 4;
}

message CreatePostResponse {
    SinglePost created_post = 1;
}

message GetPostFeedRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message GetPostFeedResponse {
    repeated SinglePost postList = 1;
}

message SinglePost {
    int64 post_id = 1;
    int64 owner_id = 2;
    int64 date = 3;
    string description = 4;
    int64 number_of_likes = 6;
    int64 number_of_comments = 7;
    int64 resource_id = 5;
    string resource_mime_type = 10;
}